--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -42,7 +42,7 @@ if __name__ == "__main__":
     Write and observe workflows, create tasks, and build interactive workflows.
   </Card>
   <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/serve-flows/deploy-a-flow">
-    Serve workflows on long lived infrastructure or deploy workflows to dynamically provisioned infrastructure.
+    Serve workflows on long lived infrastructure or deploy workflows to dynamic infrastructure.
   </Card>
   <Card title="Automate" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
     Enable workflows to react to their environment with events, automations, and webhooks.
