--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome to Prefect
-description: Prefect is a workflow orchestration framework that empowers engineers to build, observe, and react to data pipelines.
+description: Prefect is a workflow orchestration framework for building resilient data pipelines in Python.
 mode: wide
 ---
 
@@ -20,8 +20,6 @@ if __name__ == "__main__":
     # create your first deployment to automate your flow
     hello_universe.serve(name="your-first-deployment")
 ```
-
----
 
 ## Get started
 
@@ -44,9 +42,9 @@ if __name__ == "__main__":
     Write and observe workflows, create tasks, and build interactive workflows.
   </Card>
   <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/serve-flows/deploy-a-flow">
-    Serve workflows on long lived infrastructure or deploy workflows to dynamically provisioned infrastructure.
+    Serve workflows on long lived infrastructure or deploy workflows to dynamic infrastructure.
   </Card>
-  <Card title="React" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
+  <Card title="Automate" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
     Enable workflows to react to their environment with events, automations, and webhooks.
   </Card>
 </CardGroup>
