--- a/docs/3.0rc/automate/add-schedules.mdx
+++ b/docs/3.0rc/automate/add-schedules.mdx
@@ -37,7 +37,7 @@ However, the UI will display RRule schedules that you've created through the com
 The new schedule appears on the **Deployment** page where you created it. 
 New scheduled flow runs are visible in the **Upcoming** tab of the **Deployment** page.
 
-To edit an existing schedule, select the **Edit** from the three-dot menu next to a schedule on a **Deployment** page.
+To edit an existing schedule, select **Edit** from the three-dot menu next to a schedule on a **Deployment** page.
 
 ### Create schedules in Python
 
