--- a/docs/3.0rc/automate/add-schedules.mdx
+++ b/docs/3.0rc/automate/add-schedules.mdx
@@ -60,7 +60,7 @@ my_flow.serve(name="flowing", cron="* * * * *")
 
 If using work pool-based deployments, the `deploy` method has the same schedule-based parameters.
 
-When `my_flow` is served with this interval schedule, it will run every 10 minutes beginning at midnight on January, 1, 2024 in the `America/Chicago` timzone:
+When `my_flow` is served with this interval schedule, it will run every 10 minutes beginning at midnight on January, 1, 2026 in the `America/Chicago` timezone:
 
 ```python
 from datetime import timedelta, datetime
