Retitle and reshuffle deploy docs to make more sense

--- a/docs/3.0rc/deploy/dynamic-infra/deploy-docker.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/deploy-docker.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run Flows with Docker
+title: Deploy to Docker
 description: Learn how to store your flow code in a Docker image and serve your flow on any docker-compatible infrastructure.
 ---
 
