--- a/docs/3.0rc/deploy/dynamic-infra/deploy-kubernetes.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/deploy-kubernetes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run flows with Kubernetes
+title: Deploy to Kubernetes
 description: Learn how to run flows on Kubernetes using containers.
 ---
 
