--- a/docs/3.0rc/deploy/dynamic-infra/managed-execution.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/managed-execution.mdx
@@ -1,5 +1,5 @@
 ---
-title: Managed execution
+title: Deploy to managed infrastructure
 description: Learn how Prefect will run your deployment on our infrastructure.
 ---
 Prefect Cloud can run your flows on your behalf with Prefect Managed work pools.
