--- a/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy flows to work pools and workers
+title: Manage deployments with the API
 description: Learn how to schedule and trigger flow runs through the API and easily manage your code and deployments.
 ---
 
