--- a/docs/3.0rc/deploy/dynamic-infra/push-runs-remote.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/push-runs-remote.mdx
@@ -1,5 +1,5 @@
 ---
-title: Workers
+title: Deploy to Docker (2)
 description: Learn how flow deployments enable configuring flows for scheduled and remote execution with workers.
 ---
 
