--- a/docs/3.0rc/deploy/dynamic-infra/push-runs-serverless.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/push-runs-serverless.mdx
@@ -1,5 +1,5 @@
 ---
-title: Push work to serverless computing infrastructure
+title: Deploy to serverless infrastructure
 description: Learn how to use Prefect push work pools to schedule work on serverless infrastructure without having to run a worker.
 ---
 
