--- a/docs/3.0rc/deploy/dynamic-infra/work-pools.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/work-pools.mdx
@@ -459,7 +459,7 @@ Work pools are a bridge between the Prefect orchestration layer and infrastructu
 To transition from persistent infrastructure to dynamic infrastructure, use `flow.deploy` instead of `flow.serve`.
 
 <Tip>
-    **[Choosing Between `flow.deploy()` and `flow.serve()`](/3.0rc/deploy/serve-flows/#two-approaches-to-deployments)**
+    **[Choosing Between `flow.deploy()` and `flow.serve()`](/3.0rc/deploy/dynamic-infra/prefect-deploy/#two-approaches-to-deployments)**
 
     For many use cases, `serve` is sufficient for scheduling and orchestration.
     Work pools are great for complex infrastructure requirements. But they are optional.
