--- a/docs/3.0rc/deploy/static-infra/index.mdx
+++ b/docs/3.0rc/deploy/static-infra/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Intro to static deployments
+title: The serve method
 description: Create a deployment for a flow by calling the `serve` method.
 ---
 
-The simplest way to create a [deployment](/3.0rc/deploy/serve-flows/) for your 
+The simplest way to create a [deployment](/3.0rc/deploy/dynamic-infra/prefect-deploy/) for your 
 flow is by calling its `serve` method.
 This method creates a deployment for the flow and starts a long-running process 
 that monitors for work from the Prefect server.
