--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -189,7 +189,7 @@ You can also choose from other [work pool types](https://docs.prefect.io/concept
 
 ## Deploy and schedule your flow
 
-A [deployment](/3.0rc/deploy/serve-flows/) is used to determine when, where, and how a flow function should run.
+A [deployment](/3.0rc/deploy/dynamic-infra/prefect-deploy/) is used to determine when, where, and how a flow function should run.
 Deployments elevate flows to remotely configurable entities that have their own API.
 
 1. Create a deployment script:
