Restructure the hierarchy in the static topic

--- a/docs/3.0rc/deploy/static-infra/index.mdx
+++ b/docs/3.0rc/deploy/static-infra/index.mdx
@@ -62,7 +62,7 @@ if __name__ == "__main__":
 ```
 </Tip>
 
-### Additional serve options
+## Additional serve options
 
 The `serve` method on flows exposes many options for the deployment.
 Here's how to use some of those options:
@@ -97,7 +97,7 @@ Stop the script in the CLI using `CTRL+C` and your schedule automatically pauses
 To execute remotely triggered or scheduled runs, your script with `flow.serve` must be actively running.
 </Note>
 
-### Serve multiple flows at once
+## Serve multiple flows at once
 
 Serve multiple flows with the same process using the `serve` utility along with the `to_deployment` method of flows:
 
