--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -41,7 +41,7 @@ if __name__ == "__main__":
   <Card title="Develop" icon="code" href="/3.0rc/develop/write-flows">
     Write and observe workflows, create tasks, and build interactive workflows.
   </Card>
-  <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/dynamic-infra/index">
+  <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/index">
     Serve workflows on long lived infrastructure or deploy workflows to dynamically provisioned infrastructure.
   </Card>
   <Card title="Automate" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
