Remove the custom Docker image tutorial and move the other Docker tutorial to static infra

--- a/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
+++ b/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy to Docker (2)
+title: Deploy to Docker
 description: Learn how flow deployments enable configuring flows for scheduled and remote execution with workers.
 ---
 
@@ -291,7 +291,7 @@ prefect deployment run 'get_repo_info/my-deployment'
 - Learn how to configure deployments in YAML with [`prefect.yaml`](/3.0rc/deploy/dynamic-infra/prefect-deploy/).
 - [Deploy flows on Kubernetes](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)
 - [Deploy flows in Docker](/3.0rc/deploy/static-infra/push-runs-remote/)
-- [Deploy flows on serverless infrastructure](/3.0rc/deploy/static-infra/push-runs-remote/)
+- [Deploy flows on serverless infrastructure](/3.0rc/deploy/duynamic-infra/push-runs-serverless/)
 - [Daemonize workers](/3.0rc/deploy/static-infra/push-runs-remote/)
 
 # Run deployments on serverless infrastructure with Prefect workers
