--- a/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
@@ -36,9 +36,9 @@ Work pool-based deployments contain information about the infrastructure type an
 Work pool-based deployment infrastructure options include the following:
 
 - **Process**: runs flow in a subprocess. In most cases, you're better off using `.serve`.
-- **[Docker](/3.0rc/deploy/dynamic-infra/deploy-docker/)**: - runs flows in an ephemeral Docker container.
+- **[Docker](/3.0rc/deploy/static-infra/push-runs-remote/)**: - runs flows in an ephemeral Docker container.
 - **[Kubernetes](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)**: - runs flows as a Kubernetes Job.
-- **[Serverless Cloud Provider options](/3.0rc/deploy/dynamic-infra/push-runs-remote/)**: runs flows in a 
+- **[Serverless Cloud Provider options](/3.0rc/deploy/dynamic-infra/push-runs-serverless/)**: runs flows in a 
 Docker container in a serverless cloud provider environment, 
 such as AWS ECS, Azure Container Instance, Google Cloud Run, or Vertex AI.
 
@@ -108,8 +108,8 @@ For example, a flow may have Python package requirements, unique Kubernetes sett
 - How should the flow code be accessed?
 
 [Serve flows](/3.0rc/deploy/dynamic-infra/prefect-deploy/) shows how to create a deployment with a long-running process using `.serve`, 
-and how to move to a [work-pool-based deployment](/3.0rc/deploy/dynamic-infra/push-runs-remote/) setup with `.deploy`.
-Learn more about when to move to [work-pool-based deployments](/3.0rc/deploy/dynamic-infra/push-runs-remote/#why-workers-and-work-pools).
+and how to move to a [work-pool-based deployment](/3.0rc/deploy/static-infra/push-runs-remote/) setup with `.deploy`.
+Learn more about when to move to [work-pool-based deployments](/3.0rc/deploy/dynamic-infra/work-pools/).
 
 Next, you'll learn how to use `.deploy` to create deployments with Python code.
 If you prefer to learn about using a YAML-based alternative for managing deployment configuration, skip to the 
@@ -985,11 +985,7 @@ the `{{ build-image.image }}` variable is dynamically populated with the relevan
 <Note>
 **Docker step**
 
-    The most commonly used build step is 
-    [`prefect_docker.deployments.steps.build_docker_image`](/3.0rc/deploy/dynamic-infra/deploy-docker/) 
-    which produces both the `image_name` and `tag` fields.
-
-    For an example, check out [Deploy Docker](/3.0rc/deploy/dynamic-infra/deploy-docker/).
+The most commonly used build step is `prefect_docker.deployments.steps.build_docker_image` which produces both the `image_name` and `tag` fields.
 </Note>
 
 A `prefect.yaml` file can have multiple deployment configurations that control the behavior of several deployments.
@@ -1247,4 +1243,4 @@ Now that you are familiar with creating deployments, you can explore infrastruct
 - [Managed work pools](/3.0rc/deploy/dynamic-infra/managed-execution/)
 - [Push work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless/)
 - [Kubernetes work pools](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)
-- [Serverless hybrid work pools](/3.0rc/deploy/dynamic-infra/push-runs-remote/)
+- [Serverless hybrid work pools](/3.0rc/deploy/static-infra/push-runs-remote/)
