--- a/docs/3.0rc/deploy/static-infra/index.mdx
+++ b/docs/3.0rc/deploy/static-infra/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: The serve method
+title: Deploy to a local environment
 description: Create a deployment for a flow by calling the `serve` method.
 ---
 
