Put the infra options at the top of the deploy section

--- a/docs/3.0rc/deploy/store-flow-code.mdx
+++ b/docs/3.0rc/deploy/store-flow-code.mdx
@@ -292,7 +292,7 @@ Below are the recipe options and the relevant portions of the `prefect.yaml` fil
     </Tab>
 </Tabs>
 
-Another authentication option is to give the [worker](/3.0rc/deploy/dynamic-infra/workers/) access 
+Another authentication option is to give the [worker](/3.0rc/deploy/workers/) access 
 to the storage location at runtime through SSH keys.
 
 Alternatively, you can inject environment variables into your deployment. See this example that uses an environment variable named 
