--- a/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/prefect-deploy.mdx
@@ -103,13 +103,13 @@ and allow you to limit concurrent runs at the work pool level.
 
 When creating a deployment that uses a work pool and worker, there are two important considerations:
 
-- What instructions does a [worker](/3.0rc/deploy/dynamic-infra/workers/) require to set up an execution environment for your flow? 
+- What instructions does a [worker](/3.0rc/deploy/workers/) require to set up an execution environment for your flow? 
 For example, a flow may have Python package requirements, unique Kubernetes settings, or Docker networking configuration.
 - How should the flow code be accessed?
 
 [Serve flows](/3.0rc/deploy/dynamic-infra/prefect-deploy/) shows how to create a deployment with a long-running process using `.serve`, 
 and how to move to a [work-pool-based deployment](/3.0rc/deploy/static-infra/push-runs-remote/) setup with `.deploy`.
-Learn more about when to move to [work-pool-based deployments](/3.0rc/deploy/dynamic-infra/work-pools/).
+Learn more about when to move to [work-pool-based deployments](/3.0rc/deploy/work-pools/).
 
 Next, you'll learn how to use `.deploy` to create deployments with Python code.
 If you prefer to learn about using a YAML-based alternative for managing deployment configuration, skip to the 
@@ -138,7 +138,7 @@ if __name__ == "__main__":
     )
 ```
 
-Ensure the [work pool](/3.0rc/deploy/dynamic-infra/work-pools/) exists in the Prefect Cloud workspace you are 
+Ensure the [work pool](/3.0rc/deploy/work-pools/) exists in the Prefect Cloud workspace you are 
 authenticated to, or on your running self-hosted server instance.  
 Then run the script to create a deployment (in future examples this step is omitted for brevity):
 
@@ -444,7 +444,7 @@ if __name__ == "__main__":
 
 The `job_variables` parameter allows you to fine-tune the infrastructure settings for a deployment.
 The values passed in override default values in the specified work pool's 
-[base job template](/3.0rc/deploy/dynamic-infra/work-pools/#base-job-template).
+[base job template](/3.0rc/deploy/work-pools/#base-job-template).
 
 You can override environment variables, such as `image_pull_policy` and `image`, for a specific deployment with the `job_variables` 
 argument.
@@ -477,7 +477,7 @@ The dictionary key "EXTRA_PIP_PACKAGES" denotes a special environment variable t
 Python packages at runtime.
 This approach is an alternative to building an image with a custom `requirements.txt` copied into it.
 
-For more information on [overriding job variables](/3.0rc/deploy/dynamic-infra/customize).
+For more information on [overriding job variables](/3.0rc/deploy/customize).
 
 ### Work with multiple deployments with `deploy`
 
@@ -1210,7 +1210,7 @@ These are fields you can add to a deployment declaration's `work_pool` section.
 | ---------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `name`                                         | The name of the work pool to schedule flow runs in for the deployment.                                                                                                                                    |
 | <span class="no-wrap">`work_queue_name`</span> | The name of the work queue within the specified work pool to schedule flow runs in for the deployment. If not provided, the default queue for the specified work pool is used.                       |
-| `job_variables`                                | Values used to override the default values in the specified work pool's [base job template](/3.0rc/deploy/dynamic-infra/work-pools/#base-job-template). Maps directly to a created deployments `infra_overrides` attribute. |
+| `job_variables`                                | Values used to override the default values in the specified work pool's [base job template](/3.0rc/deploy/work-pools/#base-job-template). Maps directly to a created deployments `infra_overrides` attribute. |
 
 #### Deployment mechanics
 
