--- a/docs/3.0rc/deploy/index.mdx
+++ b/docs/3.0rc/deploy/index.mdx
@@ -243,7 +243,7 @@ anytime the flow or task runs, allowing you to audit changes.
 
 ### Workers and work pools
 
-[Work pools](/3.0rc/deploy/dynamic-infra/work-pools/) and [workers](/3.0rc/deploy/dynamic-infra/workers/) are an advanced deployment pattern that 
+[Work pools](/3.0rc/deploy/work-pools/) and [workers](/3.0rc/deploy/workers/) are an advanced deployment pattern that 
 allow you to dynamically provision infrastructure for each flow run.
 The work pool job template interface allows users to create and govern opinionated interfaces 
 to their workflow infrastructure.
@@ -297,7 +297,7 @@ infrastructure with work pools under these circumstances:
 - If your internal team structure requires that deployment authors be members of a different team 
 than the team managing infrastructure.
 
-[Work pools](/3.0rc/deploy/dynamic-infra/work-pools/) allow Prefect to exercise greater control 
+[Work pools](/3.0rc/deploy/work-pools/) allow Prefect to exercise greater control 
 of the infrastructure on which flows run.
 Options for [serverless work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless/) allow you to 
 scale to zero when workflows aren't running.
