--- a/docs/3.0rc/deploy/workers.mdx
+++ b/docs/3.0rc/deploy/workers.mdx
@@ -142,6 +142,6 @@ If `prefect worker start` is run non-interactively, the `prompt` install policy 
 
 See how to [daemonize a Prefect worker](/3.0rc/deploy/static-infra/push-runs-remote/).
 
-See more information on [overriding a work pool's job variables](/3.0rc/deploy/dynamic-infra/customize).
+See more information on [overriding a work pool's job variables](/3.0rc/deploy/customize).
 
 ---------
