--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -45,7 +45,7 @@ A workspace is an isolated environment within Prefect Cloud for all Prefect acti
 - [Flow runs](/3.0rc/develop/write-flows/) and task runs executed in an environment that is [syncing with the workspace](/3.0rc/manage/cloud/workspaces/)
 - [Flows](/3.0rc/develop/write-flows/) associated with flow runs and deployments observed by the Prefect Cloud API
 - [Deployments](/3.0rc/deploy/dynamic-infra/prefect-deploy/)
-- [Work pools](/3.0rc/deploy/dynamic-infra/work-pools/)
+- [Work pools](/3.0rc/deploy/work-pools/)
 - [Blocks](/3.0rc/develop/blocks/)
 - [Events](/3.0rc/automate/events/)
 - [Automations](/3.0rc/automate/events/automations-triggers/)
