--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -13,7 +13,7 @@ If you are new to Prefect, we recommend starting with the
 </Note>
 
 ## About workers and agents
-A [worker](/3.0rc/deploy/dynamic-infra/workers/) is the fusion of an 
+A [worker](/3.0rc/deploy/workers/) is the fusion of an 
 agent with an infrastructure block. 
 Like agents, workers poll a work pool for flow runs that are scheduled to start. 
 Like infrastructure blocks, workers are typed. They work with only one kind of infrastructure, 
@@ -22,7 +22,7 @@ and they specify the default configuration for jobs submitted to that infrastruc
 Accordingly, workers are not a drop-in replacement for agents. **Using workers requires 
 deploying flows differently.** In particular, deploying a flow with a worker does not involve 
 specifying an infrastructure block. Instead, infrastructure configuration is specified on the 
-[work pool](/3.0rc/deploy/dynamic-infra/work-pools/) and passed to each worker that polls work 
+[work pool](/3.0rc/deploy/work-pools/) and passed to each worker that polls work 
 from that pool.
 
 ## Upgrade enhancements
@@ -36,7 +36,7 @@ and when it last polled.
 ### Work pools
 
 - Work pools allow greater customization and governance of infrastructure parameters for deployments 
-through their [base job template](/3.0rc/deploy/dynamic-infra/work-pools/#base-job-template).
+through their [base job template](/3.0rc/deploy/work-pools/#base-job-template).
 - Prefect Cloud [push work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless/) enable flow 
 execution in your cloud provider environment without the need to host a worker.
 - Prefect Cloud [managed work pools](/3.0rc/deploy/dynamic-infra/managed-execution/) allow you to run flows on 
@@ -76,7 +76,7 @@ to enable [dryer deployment definitions](/3.0rc/deploy/dynamic-infra/prefect-dep
 
 3. **Configuring flow run infrastructure:**
 
-    infrastructure blocks --> [typed work pool](/3.0rc/deploy/dynamic-infra/workers/#worker-types)
+    infrastructure blocks --> [typed work pool](/3.0rc/deploy/workers/#worker-types)
 
     Default infrastructure config is now set on the typed work pool, and can be overwritten by 
     individual deployments.
@@ -96,7 +96,7 @@ to enable [dryer deployment definitions](/3.0rc/deploy/dynamic-infra/prefect-dep
 
     `infra_override` -> [`job_variable`](/3.0rc/deploy/dynamic-infra/prefect-deploy/#work-pool-fields)
 
-- The process for starting an agent and [starting a worker](/3.0rc/deploy/dynamic-infra/workers/#start-a-worker) 
+- The process for starting an agent and [starting a worker](/3.0rc/deploy/workers/#start-a-worker) 
 in your environment are virtually identical.
 
     `prefect agent start --pool <work pool name>` --> `prefect worker start --pool <work pool name>`
@@ -114,7 +114,7 @@ to host workers in your cluster.
 If you have existing deployments that use infrastructure blocks, you can quickly upgrade them to 
 be compatible with workers by following these steps:
 
-1. **[Create a work pool](/3.0rc/deploy/dynamic-infra/work-pools/#work-pool-configuration)**
+1. **[Create a work pool](/3.0rc/deploy/work-pools/#work-pool-configuration)**
 
 This new work pool replaces your infrastructure block.
 
@@ -144,7 +144,7 @@ deployments if you don't need the dynamic infrastructure creation or configurati
 by workers.
 </Tip>
 
-2. **[Start a worker](/3.0rc/deploy/dynamic-infra/workers/#start-a-worker)**
+2. **[Start a worker](/3.0rc/deploy/workers/#start-a-worker)**
 
 This worker replaces your agent and polls your new work pool for flow runs to execute.
 
