--- a/docs/3.0rc/deploy/work-pools.mdx
+++ b/docs/3.0rc/deploy/work-pools.mdx
@@ -1,5 +1,5 @@
 ---
-title: Work pools
+title: Learn about work pools
 description: Prefect work pools route deployment flow runs to workers.
 ---
 
