--- a/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
+++ b/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
@@ -110,246 +110,458 @@ Keep this terminal session active for the worker to continue to pick up jobs.
 Since you are running this worker locally, the worker will terminate if you close the terminal.
 In a production setting this worker should run as a [daemonized or managed process](/3.0rc/deploy/static-infra/push-runs-remote/).
 
-Next, deploy your tutorial flow to `my-docker-pool`.
-
 ## Create the deployment
 
 From the previous steps, you now have:
 
-1. [A flow](/3.0rc/develop/write-flows/)
-2. A work pool
-3. A worker
+1. A work pool
+1. A worker
 
-Update your `repo_info.py` file to build a Docker image, and update your deployment so your worker can execute it.
+Next, you'll create a deployment from your flow code.
 
-Make the following updates in `repo_info.py`:
+### Automatically bake your code into a Docker image
 
-1. Change `flow.serve` to `flow.deploy`.
-2. Tell `flow.deploy` which work pool to deploy to.
-3. Tell `flow.deploy` the name for the Docker image to build.
+Create a deployment from Python code by calling the `.deploy` method on a flow:
 
-The updated `repo_info.py` looks like this:
-
-```python repo_info.py
-import httpx
+```python buy.py
 from prefect import flow
 
-
 @flow(log_prints=True)
-def get_repo_info(repo_name: str = "PrefectHQ/prefect"):
-    url = f"https://api.github.com/repos/{repo_name}"
-    response = httpx.get(url)
-    response.raise_for_status()
-    repo = response.json()
-    print(f"{repo_name} repository statistics 🤓:")
-    print(f"Stars 🌠 : {repo['stargazers_count']}")
-    print(f"Forks 🍴 : {repo['forks_count']}")
-
+def buy():
+    print("Buying securities")
 
 if __name__ == "__main__":
-    get_repo_info.deploy(
-        name="my-first-deployment", 
+    buy.deploy(
+        name="my-code-baked-into-an-image-deployment", 
         work_pool_name="my-docker-pool", 
-        image="my-first-deployment-image:tutorial",
-        push=False
+        image="my_registry/my_image:my_image_tag"
     )
 ```
 
-<Note>
-**Why the `push=False`?**
+Ensure the [work pool](/3.0rc/deploy/work-pools/) exists in the Prefect Cloud workspace you are 
+authenticated to, or on your running self-hosted server instance.  
+Then run the script to create a deployment (in future examples this step is omitted for brevity):
 
-For this tutorial, your Docker worker is running on your machine, so you don't need to push the image built by 
-`flow.deploy` to a registry. When your worker is running on a remote machine, you must push the image to a registry 
-that the worker can access.
-
-Remove the `push=False` argument, include your registry name, and ensure you've 
-[authenticated with the Docker CLI](https://docs.docker.com/engine/reference/commandline/login/) to push the image to a registry.
-
-</Note>
-
-Now that you've updated your script, run it to deploy your flow to the work pool:
-
+<div class="terminal">
 ```bash
-python repo_info.py
+python buy.py
 ```
-    
-Prefect builds a custom Docker image containing your flow code. The worker can use it to dynamically spawn Docker 
-containers whenever this workflow needs to run.
+</div>
+
+You should see messages in your terminal that Docker is building your image.
+When the deployment build succeeds, you will see information in your terminal showing you how to start a worker for your 
+deployment, and how to run your deployment.
+Your deployment is visible on the `Deployments` page in the UI.
+
+By default, `.deploy` builds a Docker image with your flow code baked into it and pushes the image to the 
+[Docker Hub](https://hub.docker.com/) registry specified in the `image` argument`.
 
 <Note>
-    **Dockerfile**
-    
-    In this example, Prefect generates a Dockerfile that builds an image based on one of Prefect's published images. 
-    The generated Dockerfile copies the current directory into the Docker image and installs any dependencies listed in a 
-    `requirements.txt` file.
+**Authentication to Docker Hub**
 
-    To use a custom Dockerfile, specify the path to the Dockerfile using the `DockerImage` class:
-
-    ```python repo_info.py
-    import httpx
-    from prefect import flow
-    from prefect.docker import DockerImage
-
-
-    @flow(log_prints=True)
-    def get_repo_info(repo_name: str = "PrefectHQ/prefect"):
-        url = f"https://api.github.com/repos/{repo_name}"
-        response = httpx.get(url)
-        response.raise_for_status()
-        repo = response.json()
-        print(f"{repo_name} repository statistics 🤓:")
-        print(f"Stars 🌠 : {repo['stargazers_count']}")
-        print(f"Forks 🍴 : {repo['forks_count']}")
-
-
-    if __name__ == "__main__":
-        get_repo_info.deploy(
-            name="my-first-deployment", 
-            work_pool_name="my-docker-pool", 
-            image=DockerImage(
-                name="my-first-deployment-image",
-                tag="tutorial",
-                dockerfile="Dockerfile"
-            ),
-            push=False
-        )
-    ```
+    Your environment must be authenticated to your Docker registry to push an image to it.
 </Note>
 
-### Modify the deployment
-
-To update your deployment, modify your script and rerun it. Specify a value for `job_variables` 
-so your Docker worker can successfully execute scheduled runs for this flow. See the example below.
-
-The `job_variables` section allows you to fine-tune the infrastructure settings for a specific deployment. These values override 
-default values in the specified work pool's [base job template](/3.0rc/deploy/work-pools/#base-job-template).
-
-When testing images locally without pushing them to a registry (to avoid potential errors like docker.errors.NotFound), 
-we recommend including an `image_pull_policy` job_variable set to `Never`. However, for production workflows, push images to a 
-remote registry for more reliability and accessibility.
-
-Set the `image_pull_policy` as `Never` for this test deployment without affecting the default value set on your work pool:
-
-```python repo_info.py
-import httpx
-from prefect import flow
-
-
-@flow(log_prints=True)
-def get_repo_info(repo_name: str = "PrefectHQ/prefect"):
-    url = f"https://api.github.com/repos/{repo_name}"
-    response = httpx.get(url)
-    response.raise_for_status()
-    repo = response.json()
-    print(f"{repo_name} repository statistics 🤓:")
-    print(f"Stars 🌠 : {repo['stargazers_count']}")
-    print(f"Forks 🍴 : {repo['forks_count']}")
-
-
-if __name__ == "__main__":
-    get_repo_info.deploy(
-        name="my-first-deployment", 
-        work_pool_name="my-docker-pool", 
-        job_variables={"image_pull_policy": "Never"},
-        image="my-first-deployment-image:tutorial",
-        push=False
-    )
-```
-
-To register this update to your deployment's parameters with Prefect's API, run:
-
-
-```bash
-python repo_info.py
-```
-
-
-Submit a flow-run to the work pool:
-
-
-```bash
-prefect deployment run 'get_repo_info/my-deployment'
-```
-
+You can specify a registry other than Docker Hub by providing the full registry path in the `image` argument.
 
 <Warning>
-    **Common Pitfall**
-    
-    Store and run your deploy scripts at the **root of your repo**, otherwise the built Docker file may be missing files that 
-    it needs to execute.
+    If building a Docker image, your environment with your deployment needs Docker installed and running.
 </Warning>
 
-<Tip>
-    **Multiple deployments**
+To avoid pushing to a registry, set `push=False` in the `.deploy` method:
+
+```python
+
+if __name__ == "__main__":
+    buy.deploy(
+        name="my-code-baked-into-an-image-deployment", 
+        work_pool_name="my-docker-pool", 
+        image="my_registry/my_image:my_image_tag",
+        push=False
+    )
+```
+
+To avoid building an image, set `build=False` in the `.deploy` method:
+
+```python
+
+if __name__ == "__main__":
+    buy.deploy(
+        name="my-code-baked-into-an-image-deployment", 
+        work_pool_name="my-docker-pool", 
+        image="my_registry/no-build-image:1.0",
+        build=False
+    )
+```
+
+The specified image must be available in your deployment's execution environment for accessible flow code.
+
+Prefect generates a Dockerfile for you that builds an image based off of one of Prefect's published images. 
+The generated Dockerfile copies the current directory into the Docker image and installs any dependencies listed 
+in a `requirements.txt` file.
+
+### Automatically build a custom Docker image with a local Dockerfile
+
+If you want to use a custom Dockerfile, specify the path to the Dockerfile with the `DockerImage` class:
+
+```python custom_dockerfile.py
+from prefect import flow
+from prefect.docker import DockerImage
+
+
+@flow(log_prints=True)
+def buy():
+    print("Selling securities")
+
+
+if __name__ == "__main__":
+    buy.deploy(
+        name="my-custom-dockerfile-deployment", 
+        work_pool_name="my-docker-pool", 
+        image=DockerImage(
+            name="my_image",
+            tag="deploy-guide",
+            dockerfile="Dockerfile"
+    ),
+    push=False
+)
+
+```
+
+The `DockerImage` object enables image customization.
+
+For example, you can install a private Python package from GCP's artifact registry like this:
+
+Create a custom base Dockerfile.
+
+```
+FROM python:3.10
+
+ARG AUTHED_ARTIFACT_REG_URL
+COPY ./requirements.txt /requirements.txt
+
+RUN pip install --extra-index-url ${AUTHED_ARTIFACT_REG_URL} -r /requirements.txt
+```
+
+Create your deployment with the DockerImage class:
+
+```python private-package.py
+from prefect import flow
+from prefect.deployments.runner import DockerImage
+from prefect.blocks.system import Secret
+from my_private_package import do_something_cool
+
+
+@flow(log_prints=True)
+def my_flow():
+    do_something_cool()
+
+
+if __name__ == "__main__":
+    artifact_reg_url: Secret = Secret.load("artifact-reg-url")
     
-    A Prefect flow can have more than one deployment. 
-    This pattern is useful for a flow to run in different execution environments.
+    my_flow.deploy(
+        name="my-deployment",
+        work_pool_name="my-docker-pool",
+        image=DockerImage(
+            name="my-image",
+            tag="test",
+            dockerfile="Dockerfile",
+            buildargs={"AUTHED_ARTIFACT_REG_URL": artifact_reg_url.get()},
+        ),
+    )
+```
+
+Note that you used a [Prefect Secret block](/3.0rc/develop/blocks/) to load the URL configuration for 
+the artifact registry above.
+
+See all the optional keyword arguments for the [DockerImage class](https://docker-py.readthedocs.io/en/stable/images.html#docker.models.images.ImageCollection.build).
+
+<Tip>
+**Default Docker namespace**
+
+    You can set the `PREFECT_DEFAULT_DOCKER_BUILD_NAMESPACE` setting to append a default Docker namespace to all images 
+    you build with `.deploy`. This is helpful if you use a private registry to store your images.
+
+    To set a default Docker namespace for your current profile run:
+
+    <div class="terminal">
+    ```bash
+    prefect config set PREFECT_DEFAULT_DOCKER_BUILD_NAMESPACE=<docker-registry-url>/<organization-or-username>
+    ```
+    </div>
+
+    Once set, you can omit the namespace from your image name when creating a deployment:
+
+    ```python with_default_docker_namespace.py
+    if __name__ == "__main__":
+        buy.deploy(
+            name="my-code-baked-into-an-image-deployment", 
+            work_pool_name="my-docker-pool", 
+            image="my_image:my_image_tag"
+        )
+    ```
+
+    The above code builds an image with the format `<docker-registry-url>/<organization-or-username>/my_image:my_image_tag` 
+    when `PREFECT_DEFAULT_DOCKER_BUILD_NAMESPACE` is set.
 </Tip>
+
+### Store your code in git-based cloud storage
+
+While baking code into Docker images is a popular deployment option, many teams store their workflow code in git-based 
+storage, such as GitHub, Bitbucket, or Gitlab.
+
+If you don't specify an `image` argument for `.deploy`, you must specify where to pull the flow code from at runtime 
+with the `from_source` method.
+
+Here's how to pull your flow code from a GitHub repository:
+
+```python git_storage.py
+from prefect import flow
+
+if __name__ == "__main__":
+    flow.from_source(
+        "https://github.com/my_github_account/my_repo/my_file.git",
+        entrypoint="flows/no-image.py:hello_world",
+    ).deploy(
+        name="no-image-deployment",
+        work_pool_name="my-docker-pool",
+        build=False
+    )
+```
+
+The `entrypoint` is the path to the file the flow is located in and the function name, separated by a colon.
+
+Alternatively, you could specify a git-based cloud storage URL for a Bitbucket or Gitlab repository.
+
+<Note>
+    If you don't specify an image as part of your deployment creation, the image specified in the work pool 
+    runs your flow.
+</Note>
+
+After creating a deployment, you may need to change your flow code.
+Generally, you can just push your code to GitHub, without rebuilding your deployment.
+The exception is if there is something the server needs to know about changes, such as the flow entrypoint parameters.
+Rerunning the Python script with `.deploy` updates your deployment on the server with the new flow code.
+
+If you need to provide additional configuration, such as specifying a private repository, you can provide a 
+[`GitRepository`](https://prefect-python-sdk-docs.netlify.app/prefect/flows/#prefect.runner.storage.GitRepository) object instead of a URL:
+
+```python private_git_storage.py
+from prefect import flow
+from prefect.runner.storage import GitRepository
+from prefect.blocks.system import Secret
+
+if __name__ == "__main__":
+    flow.from_source(
+        source=GitRepository(
+        url="https://github.com/org/private-repo.git",
+        branch="dev",
+        credentials={
+            "access_token": Secret.load("github-access-token")
+        }
+    ),
+    entrypoint="flows/no-image.py:hello_world",
+    ).deploy(
+        name="private-git-storage-deployment",
+        work_pool_name="my-docker-pool",
+        build=False
+    )
+```
+
+Note the use of the Secret block to load the GitHub access token.
+Alternatively, you could provide a username and password to the `username` and `password` fields of the `credentials` argument.
+
+### Store your code in cloud provider storage
+
+Another option for flow code storage is any [fsspec](https://filesystem-spec.readthedocs.io/en/latest/)-supported 
+storage location, such as AWS S3, GCP GCS, or Azure Blob Storage.
+
+For example, you can pass the S3 bucket path to `source`.
+
+```python s3_storage.py
+from prefect import flow
+
+if __name__ == "__main__":
+    flow.from_source(
+        source="s3://my-bucket/my-folder",
+        entrypoint="flows.py:my_flow",
+    ).deploy(
+        name="deployment-from-aws-flow",
+        work_pool_name="my-docker-pool",
+    )
+```
+
+In the example above, your credentials are auto-discovered from your deployment creation environment. Your credentials 
+must be available in your runtime environment.
+
+If you need additional configuration for your cloud-based storage (for example, with a private S3 Bucket), we recommend using a 
+[storage block](/3.0rc/develop/blocks/).
+A storage block also ensures your credentials are available in both your deployment creation environment and your execution 
+environment.
+
+Here's an example that uses an `S3Bucket` block from the [prefect-aws library](https://prefecthq.github.io/prefect-aws/):
+
+```python s3_storage_auth.py
+from prefect import flow
+from prefect_aws.s3 import S3Bucket
+
+if __name__ == "__main__":
+    flow.from_source(
+        source=S3Bucket.load("my-code-storage"), entrypoint="my_file.py:my_flow"
+    ).deploy(name="test-s3", work_pool_name="my-docker-pool")
+```
+
+The deployment creation mechanics or `.serve` are similar to `.deploy`. `.deploy` 
+just requires a work pool name and has a number of parameters dealing with flow code storage for Docker images.
+
+Unlike `.serve`, if you don't specify an image to use for your flow, you must to specify where to pull the flow code from at runtime  
+with the `from_source` method; `from_source` is optional with `.serve`.
+
+### Additional configuration with `.deploy`
+
+The examples so far have explored options for where to store flow code.
+Next, see deployment configuration options.
+
+To pass parameters to your flow, you can use the `parameters` argument in the `.deploy` method. Just pass in a dictionary of 
+key-value pairs.
+
+```python pass_params.py
+from prefect import flow
+
+@flow
+def hello_world(name: str):
+    print(f"Hello, {name}!")
+
+if __name__ == "__main__":
+    hello_world.deploy(
+        name="pass-params-deployment",
+        work_pool_name="my-docker-pool",
+        parameters=dict(name="Prefect"),
+        image="my_registry/my_image:my_image_tag",
+    )
+```
+
+The `job_variables` parameter allows you to fine-tune the infrastructure settings for a deployment.
+The values passed in override default values in the specified work pool's 
+[base job template](/3.0rc/deploy/work-pools/#base-job-template).
+
+You can override environment variables, such as `image_pull_policy` and `image`, for a specific deployment with the `job_variables` 
+argument.
+
+```python job_var_image_pull.py
+if __name__ == "__main__":
+    get_repo_info.deploy(
+        name="my-deployment-never-pull", 
+        work_pool_name="my-docker-pool", 
+        job_variables={"image_pull_policy": "Never"},
+        image="my-image:my-tag"",
+        push=False
+    )
+```
+
+Similarly, you can override the environment variables specified in a work pool through the `job_variables` parameter:
+
+```python job_var_env_vars.py
+if __name__ == "__main__":
+    get_repo_info.deploy(
+        name="my-deployment-never-pull", 
+        work_pool_name="my-docker-pool", 
+        job_variables={"env": {"EXTRA_PIP_PACKAGES": "boto3"} },
+        image="my-image:my-tag"",
+        push=False
+    )
+```
+
+The dictionary key "EXTRA_PIP_PACKAGES" denotes a special environment variable that Prefect uses to install additional 
+Python packages at runtime.
+This approach is an alternative to building an image with a custom `requirements.txt` copied into it.
+
+For more information on [overriding job variables](/3.0rc/deploy/customize).
+
+### Work with multiple deployments with `deploy`
+
+Create multiple deployments from one or more Python files that use `.deploy`.
+You can manage these deployments independently of one another to deploy the same flow with different configurations 
+in the same codebase.
+
+To create multiple work pool-based deployments at once, use the `deploy` function, which is analogous to the `serve` function:
+
+```python
+from prefect import deploy, flow
+
+@flow(log_prints=True)
+def buy():
+    print("Buying securities")
+
+
+if __name__ == "__main__":
+    deploy(
+        buy.to_deployment(name="dev-deploy", work_pool_name="my-docker-pool"),
+        buy.to_deployment(name="prod-deploy", work_pool_name="my-docker-pool"),
+        image="my-registry/my-image:dev",
+        push=False,
+    )
+```
+
+In the example above you created two deployments from the same flow, but with different work pools.
+Alternatively, you can create two deployments from different flows:
+
+```python
+from prefect import deploy, flow
+
+@flow(log_prints=True)
+def buy():
+    print("Buying securities.")
+
+@flow(log_prints=True)
+def sell():
+    print("Selling securities.")
+
+
+if __name__ == "__main__":
+    deploy(
+        buy.to_deployment(name="buy-deploy"),
+        sell.to_deployment(name="sell-deploy"),
+        work_pool_name="my-docker-pool"
+        image="my-registry/my-image:dev",
+        push=False,
+    )
+```
+
+In the example above, the code for both flows is baked into the same image.
+
+You can specify one or more flows to pull from a remote location at runtime with the `from_source` method.
+Here's an example of deploying two flows, one defined locally and one defined in a remote repository:
+
+```python
+from prefect import deploy, flow
+
+
+@flow(log_prints=True)
+def local_flow():
+    print("I'm a flow!")
+
+if __name__ == "__main__":
+    deploy(
+        local_flow.to_deployment(name="example-deploy-local-flow"),
+        flow.from_source(
+            source="https://github.com/org/repo.git",
+            entrypoint="flows.py:my_flow",
+        ).to_deployment(
+            name="example-deploy-remote-flow",
+        ),
+        work_pool_name="my-docker-pool",
+        image="my-registry/my-image:dev",
+    )
+```
+
+You could pass any number of flows to the `deploy` function.
+This is useful if using a monorepo approach to your workflows.
 
 ## Learn more
 
-- Learn how to configure deployments in YAML with [`prefect.yaml`](/3.0rc/deploy/dynamic-infra/prefect-deploy/).
 - [Deploy flows on Kubernetes](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)
 - [Deploy flows in Docker](/3.0rc/deploy/static-infra/push-runs-remote/)
 - [Deploy flows on serverless infrastructure](/3.0rc/deploy/duynamic-infra/push-runs-serverless/)
 - [Daemonize workers](/3.0rc/deploy/static-infra/push-runs-remote/)
-
-# Run deployments on serverless infrastructure with Prefect workers
-
-Prefect provides hybrid work pools for workers to run flows on the serverless platforms of major cloud providers.
-The following options are available:
-
-- AWS Elastic Container Service (ECS)
-- Azure Container Instances (ACI)
-- Google Cloud Run
-- Google Cloud Run V2
-- Google Vertex AI
-
-![Work pool options](/3.0rc/img/ui/work-pools.png)
-
-- Create a work pool that sends work to your chosen serverless infrastructure
-- Deploy a flow to that work pool
-- Start a worker in your serverless cloud provider that polls its matched work pool for scheduled runs
-- Schedule a deployment run that a worker picks up from the work pool and runs on your serverless infrastructure
-
-<Note>
-**Push work pools don't require a worker**
-
-Options for push work pool versions of AWS ECS, Azure Container Instances, and Google Cloud Run that do not require a 
-worker are available with Prefect Cloud.
-These push work pool options require connection configuration information to be stored on Prefect Cloud.
-Read more in the [Serverless push work pool guide](/3.0rc/deploy/dynamic-infra/push-runs-serverless/).
-</Note>
-
-This is a brief overview of the options to run workflows on serverless infrastructure.
-For in-depth guides, see the Prefect integration libraries:
-
-- [AWS ECS guide in the `prefect-aws` docs](https://prefecthq.github.io/prefect-aws/ecs_guide/)
-- [Azure Container Instances guide](/integrations/prefect-azure/aci_worker/)
-- [Google Cloud Run guide in the `prefect-gcp` docs](https://prefecthq.github.io/prefect-gcp/gcp-worker-guide/).
-- For Google Vertex AI, follow the Cloud Run guide, substituting *Google Vertex AI* where *Google Cloud Run* is mentioned.
-
-<Note>
-**Choosing between Google Cloud Run and Google Vertex AI**
-
-Google Vertex AI is well-suited for machine learning model training applications with GPUs or TPUs and high resource 
-levels.
-</Note>
-
-## Steps
-
-1. Make sure you have a user or service account on your chosen cloud provider with the necessary permissions to run serverless jobs
-1. Create the appropriate serverless work pool that uses a worker in the Prefect UI
-1. Create a deployment that references the work pool
-1. Start a worker in your chose serverless cloud provider infrastructure
-1. Run the deployment
-
-## Next steps
-
-Learn more about [work pools](/3.0rc/deploy/work-pools/) and [workers](/3.0rc/deploy/workers/).
-
-Learn about installing dependencies at runtime or baking them into your Docker image in the 
-[work pools and workers guide](/3.0rc/deploy/dynamic-infra/prefect-deploy/#creating-work-pool-based-deployments-with-deploy).
-
-To set up a long-lived process on a Windows machine the pattern is similar.
-Instead of systemd, you can use [NSSM](https://nssm.cc/).
