Remove granular linking

--- a/docs/3.0rc/manage/cloud/connect-to-cloud.mdx
+++ b/docs/3.0rc/manage/cloud/connect-to-cloud.mdx
@@ -102,7 +102,7 @@ See [Settings](/3.0rc/manage/settings-and-profiles/) for details.
 **Environment variables**
 
 You can set `PREFECT_API_URL` and `PREFECT_API_KEY` just like any other environment variable. 
-See [Overriding defaults with environment variables](/3.0rc/manage/settings-and-profiles/#overriding-defaults-with-environment-variables) 
+See [Overriding defaults with environment variables](/3.0rc/manage/settings-and-profiles/) 
 for more information.
 </Note>
 
