--- a/docs/3.0rc/api-ref/rest-api/index.mdx
+++ b/docs/3.0rc/api-ref/rest-api/index.mdx
@@ -11,7 +11,7 @@ Prefect Cloud and a locally hosted Prefect server each provide a REST API.
     - [Interactive Prefect Cloud REST API documentation](https://app.prefect.cloud/api/docs)
     - [Finding your Prefect Cloud details](#finding-your-prefect-cloud-details)
 - A self-hosted server instance:
-    - Interactive REST API documentation for a self-hosted Prefect server instance is available under **Server API** on the sidebar naviagtion or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0rc/manage/settings-and-profiles/#prefect_api_url) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
+    - Interactive REST API documentation for a self-hosted Prefect server instance is available under **Server API** on the sidebar naviagtion or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0rc/manage/settings-and-profiles/) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
     
 ## Interacting with the REST API
 
