--- a/docs/3.0rc/develop/task-caching.mdx
+++ b/docs/3.0rc/develop/task-caching.mdx
@@ -21,7 +21,7 @@ This behavior can be configured - see [customizing the cache](/3.0rc/develop/wri
 <Warning>
 **Caching requires result persistence**
 
-Prefect's caching mechanism is based on result persistence which is off by default.
+Caching requires result persistence, which is off by default.
 To turn on result persistence for all of your tasks use the `PREFECT_RESULTS_PERSIST_BY_DEFAULT` setting:
 
 ```
