--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -8,7 +8,7 @@ Configuration can be set through two mechanisms:
 - **environment variables**: Prefect settings are always prefixed with `PREFECT_`. Using environment variables
 is most useful when configuring the runtime environment of a workflow or when updating settings temporarily
 for a single session.
-- **Prefect profiles**: Prefect profiles store your preferred settings on disk, and allow you to switch
+- **Prefect profiles**: Prefect profiles store your preferred settings locally, and allow you to switch
 between common groups of configuration; for example, when switching between a locally hosted server and a
 Prefect Cloud instance.
 
