--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -20,7 +20,7 @@ prefect config view --show-defaults
 
 These settings are type-validated and [documented](https://prefect-python-sdk-docs.netlify.app/prefect/settings/).
 
-## Profiles
+## Manage profiles
 
 Prefect profiles are persisted groups of settings on your local machine. 
 By default these settings are stored in a [TOML](https://toml.io/en/) file located at `~/.prefect/profiles.toml`.
