--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -64,7 +64,7 @@ prefect profile inspect
 prefect config unset PREFECT_LOGGING_LEVEL="ERROR" -y
 ```
 
-### Using Environment variables
+### Use Environment variables
 
 All settings have keys that match the name of the environment variable that can be used to override them.
 
