--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -122,7 +122,7 @@ You can also set `PREFECT_API_URL` to the API URL.
 
 This setting is a fallback if `PREFECT_UI_API_URL` is not set.
 
-### CSRF Protection Settings
+### CSRF protection settings
 
 If using a local Prefect server instance, you can configure CSRF protection settings.
 
