update cloud non-workspace docs

--- a/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
@@ -24,8 +24,8 @@ Within your account, select the **SSO** page to enable SSO for users.
 
 If you haven't enabled SSO for a domain yet, enter the email domains for enabling SSO in Prefect Cloud, and save it.
 
-Under **Enabled Domains**, select the domains from the **Domains** list, then select **Generate Link**. This step creates a 
-link to configure SSO with your identity provider.
+Under **Enabled Domains**, select the domains from the **Domains** list, then select **Generate Link**. 
+This step creates a link to configure SSO with your identity provider.
 
 ![Generating a configuration link for single sign-on in the Prefect Cloud UI.](/3.0rc/img/ui/cloud-sso-provider.png)
 
